public enum GravityDirection
{
    Up = 1,
    Down = -1
}