public enum MovementType
{
    Ball,
    Ship,
    Cube
}