using UnityEngine;

public enum EnumTerrain
{
    Block = 0,
    Spike = 1,
    JumpOrb = 2,
    GravityOrb = 3,
    ShipPortal = 4,
    CubePortal = 5,
    BallPortal = 6,
}
